shipping-app/app/globals.css
@import "tailwindcss";

:root {
  --background: #ffffff;
  --foreground: #171717;
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
}

body {
  background: var(--background);
  color: var(--foreground);
  font-family: var(--font-sans), ui-sans-serif, system-ui, sans-serif;
  @apply antialiased;
}

/*fix recuadros en charts al hacer click o tab*/
.recharts-wrapper *:focus {
  outline: 2px solid transparent !important;
}

.recharts-wrapper *:focus-visible {
  outline: 2px solid transparent !important;
}

